--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: node_js
 node_js:
   - "8"
-env:
-  - CI=false
 
 before_install:
   - gem install s3_website
 
-script: npm run build
+script: CI=false npm run build
 
 after_success: s3_website push
 branches:
