--- a/s3_website.yml
+++ b/s3_website.yml
@@ -21,7 +21,7 @@ index_document: index.html
 # gzip_zopfli: true
 
 # See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
-# s3_endpoint: us-east-1
+# s3_endpoint: eu-west-1
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
 
@@ -43,7 +43,7 @@ cloudfront_distribution_config:
   aliases:
     quantity: 1
     items:
-      - beta.contributor.ninja
+      - contributor.ninja
 
 # concurrency_level: 5
 
