--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,5 +1,5 @@
-s3_id: <%= ENV['S3_ID'] %>
-s3_secret: <%= ENV['S3_SECRET'] %>
+s3_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+s3_secret: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 s3_bucket: contributor.ninja-beta
 
 # Below are examples of all the available configurations.
